--- a/.hound.yml
+++ b/.hound.yml
@@ -1,14 +1,14 @@
 scss:
-  config_file: config/hound/.scss-style.yml
+  config_file: config/hound/scss-style.yml
 
 ruby:
-  config_file: config/hound/.ruby-style.yml
+  config_file: config/hound/ruby-style.yml
 
 javascript:
   enabled: false
   #ignore_file: .javascript_ignore
 
 coffeescript:
-  config_file: config/hound/.coffeescript-style.json
+  config_file: config/hound/coffeescript-style.json
 
 fail_on_violations: true
